; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_clear_receipts.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_clear_receipts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32*, %struct.Receipts* }
%struct.Receipts = type { %struct.Receipts* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i64)* @clear_receipts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clear_receipts(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.Receipts*, align 8
  %7 = alloca %struct.Receipts*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i64 @friend_not_valid(%struct.TYPE_6__* %8, i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %44

13:                                               ; preds = %2
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 1
  %20 = load %struct.Receipts*, %struct.Receipts** %19, align 8
  store %struct.Receipts* %20, %struct.Receipts** %6, align 8
  br label %21

21:                                               ; preds = %24, %13
  %22 = load %struct.Receipts*, %struct.Receipts** %6, align 8
  %23 = icmp ne %struct.Receipts* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %21
  %25 = load %struct.Receipts*, %struct.Receipts** %6, align 8
  %26 = getelementptr inbounds %struct.Receipts, %struct.Receipts* %25, i32 0, i32 0
  %27 = load %struct.Receipts*, %struct.Receipts** %26, align 8
  store %struct.Receipts* %27, %struct.Receipts** %7, align 8
  %28 = load %struct.Receipts*, %struct.Receipts** %6, align 8
  %29 = call i32 @free(%struct.Receipts* %28)
  %30 = load %struct.Receipts*, %struct.Receipts** %7, align 8
  store %struct.Receipts* %30, %struct.Receipts** %6, align 8
  br label %21

31:                                               ; preds = %21
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %33, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 1
  store %struct.Receipts* null, %struct.Receipts** %37, align 8
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %39, align 8
  %41 = load i64, i64* %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i64 %41
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  store i32* null, i32** %43, align 8
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %31, %12
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @friend_not_valid(%struct.TYPE_6__*, i64) #1

declare dso_local i32 @free(%struct.Receipts*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
